--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "parcel-bundler": "^1.12.4",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "sass": "^1.24.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   }
 }
